--- a/backend-service/docker-compose.yml
+++ b/backend-service/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 
 services:
+  db:
+    image: postgres
   web:
     build: .
     command: python3 productsapis/manage.py runserver 0.0.0.0:8000
@@ -8,4 +10,5 @@ services:
       - .:/code
     ports:
       - "8000:8000"
-    
+    depends_on:
+      - db
